[tool.poetry]
name = "pixelword"
version = "0.0.1"
description = "Converts the input word into a colorful pixelated gif."
authors = ["Abdul Moid Mohammed"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
